--- a/client/src/components/gigCard/GigCard.scss
+++ b/client/src/components/gigCard/GigCard.scss
@@ -11,6 +11,7 @@
     }
 
     .info{
+        text-decoration: initial;
         padding: 10px 20px;
         display: flex;
         flex-direction: column;
