--- a/client/src/components/reviews/Reviews.scss
+++ b/client/src/components/reviews/Reviews.scss
@@ -1,6 +1,44 @@
 .reviews {
     margin-top: 50px;
 
+    .add {
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        .addForm {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            input {
+                padding: 20px;
+            }
+
+            display: flex;
+            justify-content: space-between;
+
+            select {
+                width: 200px;
+                padding: 10px;
+                align-self: flex-end;
+
+            }
+
+            button {
+                align-self: end;
+                width: 200px;
+                padding: 10px;
+                border: none;
+                border-radius: 5px;
+                background-color: royalblue;
+                color: white;
+                cursor: pointer;
+            }
+        }
+    }
+
     hr {
         height: 0;
         border: 0.5px solid lightgray;
