table layout and orders function

--- a/client/src/components/navbar/Navbar.scss
+++ b/client/src/components/navbar/Navbar.scss
@@ -23,7 +23,7 @@
         width: 1400px;
         display: flex;
         justify-content: space-between; // all contents in container are seperated by space
-        padding: 20px 0px;
+        padding: 20px 20px;
         .logo{
             font-size: 34px;
             font-weight: bold;
@@ -31,7 +31,7 @@
 
             }
             .dot{
-                color: #1dbf73;
+                color: royalblue;
             }
         }
         .links{
