--- a/client/src/pages/orders/Orders.scss
+++ b/client/src/pages/orders/Orders.scss
@@ -7,6 +7,7 @@
         padding: 50px 0px;
 
         .title {
+            margin-left: 75px;
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -23,6 +24,7 @@
         }
 
         table {
+            margin-left: 75px;
             width: 100%;
 
             tr {
