order layout change

--- a/client/src/pages/orders/Orders.scss
+++ b/client/src/pages/orders/Orders.scss
@@ -7,7 +7,7 @@
         padding: 50px 0px;
 
         .title {
-            margin-left: 75px;
+            margin: 0px 75px;
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -24,8 +24,8 @@
         }
 
         table {
-            margin-left: 75px;
-            width: 100%;
+            margin: 0px 75px;
+            width: 1250px;
 
             tr {
                 height: 50px;
