--- a/client/src/pages/messages/Messages.scss
+++ b/client/src/pages/messages/Messages.scss
@@ -10,12 +10,12 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            
+            margin: 0px 75px;
         }
 
         table {
-            width: 100%;
-
+            width: 90%;
+            margin: 0px 75px;
             tr {
                 height: 100px;
 
@@ -27,8 +27,13 @@
                     padding: 10px;
                     &:first-child{
                         font-weight: 500;
+                        width: 300px;
                     }
-                    &:nth-child(2),&:nth-child(3){
+                    &:nth-child(2){
+                        color: gray;
+                        width: 500px;
+                    }
+                    &:nth-child(3) {
                         color: gray;
                     }
                 }
