--- a/client/src/pages/myGigs/MyGigs.scss
+++ b/client/src/pages/myGigs/MyGigs.scss
@@ -37,8 +37,13 @@
             object-fit: cover;
           }
           .delete {
-            width: 20px;
-            cursor: pointer;
+            background-color: red;
+              color: white;
+              font-weight: 500;
+              border: none;
+              border-radius: 5px;
+              padding: 10px;
+              cursor: pointer;
           }
         }
 
