--- a/client/src/pages/add/Add.scss
+++ b/client/src/pages/add/Add.scss
@@ -32,6 +32,17 @@
                     padding: 20px;
                 }
 
+                .images{
+                    display: flex;
+                    align-items: center;
+                    gap: 20px;
+                    .imagesInputs{
+                        display: flex;
+                        flex-direction: column;
+                        gap: 20px;
+                    }
+                }
+
                 button{
                     border: none;
                     border-radius: 5px;
@@ -41,6 +52,34 @@
                     font-weight: 500;
                     font-size: 18px;
                     cursor: pointer;
+                }
+
+                .add{
+                    display: flex;
+                    justify-content: space-between;
+                    button{
+                        border-radius: 0px 5px 5px 0px;
+                    }
+
+                    input{
+                        width: 100%;
+                    }
+                }
+                .addedFeatures{
+                    display: flex;
+                    gap: 20px;
+                    button{
+                        height: 30px;
+                        display: flex;
+                        align-items: center;
+                        font-size: 12px;
+                        font-weight: 400;
+                        background-color: transparent;
+                        color: red;
+                        border: 1px solid red;
+                        justify-content: space-between;
+                        gap: 20px;
+                    }
                 }
             }
         }
